tests: use hspec-megaparsec

--- a/package.yaml
+++ b/package.yaml
@@ -125,6 +125,7 @@ tests:
     dependencies:
     - hrafnar
     - hspec
+    - hspec-megaparsec
     - hspec-wai
     - smallcheck-series
     - case-insensitive
